# poly-loader

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  polyloader.cpp  polyloader.hpp  polyloader.info
data/: test_square.txt  test_triangle.txt
